--- a/src/main/resources/templates/mail/mail-is-verify.html
+++ b/src/main/resources/templates/mail/mail-is-verify.html
@@ -1,36 +1,66 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>موفقیت | اهراز ایمیل</title>
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="/favicon.ico" th:href="@{/favicon.png}">
-    <!-- Theme Color -->
-    <meta name="theme-color" content="#5867dd">
-    <!-- Plugin styles -->
-    <link rel="stylesheet" th:href="@{/vendors/bundle.css}" href="../../static/vendors/bundle.css" type="text/css">
-    <!-- App styles -->
-    <link rel="stylesheet" th:href="@{/assets/css/app.css}" href="../../static/assets1/css/app.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
+    <title>Success</title>
 </head>
-
-<body class="login-img3-body">
-
-<div class="container">
-    <div>
-        <h1 style="color: #1f1e1d; font-style: italic;">ایمیل شما با موفقیت تایید شده.</h1>
-        <h2 style="color: #1f1e1d; font-style: italic;">به سیستم ابری هیوا خوش آمدید</h2>
-        <a class="btn btn-primary btn-lg btn-block" style="margin-top: 30%" th:href="@{/authoritarian/login}">ورود</a>
+<style>
+    body {
+        text-align: center;
+        padding: 40px 0;
+        background: #EBF0F5;
+    }
+    h1 {
+        color: #88B04B;
+        font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
+        font-weight: 900;
+        font-size: 40px;
+        margin-bottom: 10px;
+    }
+    p {
+        color: #404F5E;
+        font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
+        font-size:20px;
+        margin: 0;
+    }
+    i {
+        color: #9ABC66;
+        font-size: 100px;
+        line-height: 200px;
+        margin-left:-15px;
+    }
+    .card {
+        background: white;
+        padding: 60px;
+        border-radius: 4px;
+        box-shadow: 0 2px 3px #C8D0D8;
+        display: inline-block;
+        margin: 0 auto;
+    }
+    a {
+        font-family: 'Montserrat', sans-serif;
+        display: inline-block;
+        text-transform: uppercase;
+        color: #464dab;
+        text-decoration: none;
+        border: 2px solid;
+        background: transparent;
+        padding: 10px 40px;
+        font-size: 14px;
+        font-weight: 700;
+        -webkit-transition: 0.2s all;
+        transition: 0.2s all;
+        margin-top: 10px;
+    }
+</style>
+<body>
+<div class="card">
+    <div style="border-radius:200px; height:200px; width:200px; background: #F8FAF5; margin:0 auto;">
+        <i>&#10003;</i>
     </div>
+    <h1>SUCCESS</h1>
+    <p>Your Account Enable successfully;<br/> Now You can login to your account!</p>
+    <a href="#">Home</a> <a href="#">Login</a>
 </div>
-
-<!-- Plugin scripts -->
-<script th:src="@{/vendors/bundle.js}" src="../../static/vendors/bundle.js"></script>
-
-<!-- App scripts -->
-<script th:src="@{/assets/js/app.js}" src="../../static/assets1/js/app.js"></script>
 </body>
-
 </html>
