--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -24,6 +24,7 @@
   <link href="/static/assets/css/style.css" th:href="@{/assets/css/style.css}" rel="stylesheet">
   <link href="/static/assets/css/custom.css" th:href="@{/assets/css/custom.css}" rel="stylesheet">
   <script src='https://www.google.com/recaptcha/api.js'></script>
+  <script src="/static/assets/js/md5.min.js" th:src="@{/assets/js/md5.js}"></script>
 </head>
 
 <body>
@@ -56,7 +57,7 @@
                     <p th:if="${!#strings.equals(param.error,'true')}" th:text="${param.error}">Invalid username or password.</p>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                   </div>
-                  <form  th:action="@{/auth/login}" method="post"  class="row g-3">
+                  <form  th:action="@{/auth/login}" method="post" onsubmit="DoSubmit(this);"  class="row g-3">
 
                     <div class="col-12">
                       <div class="input-group">
@@ -76,7 +77,7 @@
                       <span id="captchaError" class="alert alert-danger col-sm-4" style="display:none"></span>
                     </div>
                     <div class="col-12">
-                      <button class="btn btn-primary w-100" type="submit">Login</button>
+                      <button class="btn btn-primary w-100" type="submit" >Login</button>
                     </div>
                     <div class="col-12">
                       <p class="small mb-0">Forget my password?
