--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -71,7 +71,7 @@
                         <input type="password" name="password" class="form-control" id="password" placeholder="Password" required>
                       </div>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12" th:if="${@environment.getProperty('google.recaptcha.enable')}">
                       <div class="g-recaptcha col-sm-5" th:attr="data-sitekey=${@captchaService.getReCaptchaSite()}"
                            data-callback="onReCaptchaSuccess" data-expired-callback="onReCaptchaExpired"></div>
                       <span id="captchaError" class="alert alert-danger col-sm-4" style="display:none"></span>
