--- a/src/main/resources/templates/forget/change-password.html
+++ b/src/main/resources/templates/forget/change-password.html
@@ -54,9 +54,9 @@
                                     <h5 class="card-title text-center pb-0 fs-4">Forget My Password</h5>
                                     <p class="text-center small">Enter the username you registered with</p>
                                 </div>
-                                <div th:if="${!#strings.isEmpty(message)}" style="height: 44px"
+                                <div th:if="${param.error}" style="height: 44px"
                                      class="alert alert-danger alert-dismissible fade show" role="alert">
-                                    <p th:text="${message}">Message</p>
+                                    <p th:text="${param.error}">Message</p>
                                     <button type="button" class="btn-close" data-bs-dismiss="alert"
                                             aria-label="Close"></button>
                                 </div>
