--- a/src/main/resources/templates/register/register.html
+++ b/src/main/resources/templates/register/register.html
@@ -54,9 +54,15 @@
                                     <h5 class="card-title text-center pb-0 fs-4">Create an Account</h5>
                                     <p class="text-center small">Enter your personal details to create account</p>
                                 </div>
-                                <div th:if="${!#strings.isEmpty(message)}" style="height: 44px"
+                                <div th:if="${param.error}" style="height: 44px"
                                      class="alert alert-danger alert-dismissible fade show" role="alert">
-                                    <p th:text="${message}">Message</p>
+                                    <p th:text="${param.error}">Message</p>
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                            aria-label="Close"></button>
+                                </div>
+                                <div th:if="${error}" style="height: 44px"
+                                     class="alert alert-danger alert-dismissible fade show" role="alert">
+                                    <p th:text="${error}">Message</p>
                                     <button type="button" class="btn-close" data-bs-dismiss="alert"
                                             aria-label="Close"></button>
                                 </div>
@@ -103,7 +109,7 @@
                                                    required>
                                         </div>
                                     </div>
-                                    <div class="col-12">
+                                    <div class="col-12" th:if="${@environment.getProperty('google.recaptcha.enable')}">
                                         <div class="g-recaptcha col-sm-5"
                                              th:attr="data-sitekey=${@captchaService.getReCaptchaSite()}"
                                              data-callback="onReCaptchaSuccess"
