--- a/src/main/resources/templates/register/resend-account-validate-email.html
+++ b/src/main/resources/templates/register/resend-account-validate-email.html
@@ -54,9 +54,15 @@
                                     <h5 class="card-title text-center pb-0 fs-4">Resend Account Validate Email</h5>
                                     <p class="text-center small">Enter the email address you registered with</p>
                                 </div>
-                                <div th:if="${!#strings.isEmpty(message)}" style="height: 44px"
+                                <div th:if="${param.error}" style="height: 44px"
                                      class="alert alert-danger alert-dismissible fade show" role="alert">
-                                    <p th:text="${message}">Message</p>
+                                    <p th:text="${param.error}">Message</p>
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                            aria-label="Close"></button>
+                                </div>
+                                <div th:if="${error}" style="height: 44px"
+                                     class="alert alert-danger alert-dismissible fade show" role="alert">
+                                    <p th:text="${error}">Message</p>
                                     <button type="button" class="btn-close" data-bs-dismiss="alert"
                                             aria-label="Close"></button>
                                 </div>
