--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -71,6 +71,12 @@
                         <input type="password" name="password" class="form-control" id="password" placeholder="Password" required>
                       </div>
                     </div>
+                    <div class="col-12">
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="remember-me" value="true" id="rememberMe">
+                        <label class="form-check-label" for="rememberMe">Remember me</label>
+                      </div>
+                    </div>
                     <div class="col-12" th:if="${@environment.getProperty('google.recaptcha.enable')}">
                       <div class="g-recaptcha col-sm-5" th:attr="data-sitekey=${@captchaService.getReCaptchaSite()}"
                            data-callback="onReCaptchaSuccess" data-expired-callback="onReCaptchaExpired"></div>
